--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node --max_old_space_size=4096 node_modules/.bin/next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -25,6 +25,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "lodash": "^4.17.21",
+    "material-react-table": "^1.14.0",
     "next": "13.4.3",
     "next-auth": "^4.23.0",
     "react": "18.2.0",
