--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.4.3",
     "lodash": "^4.17.21",
     "material-react-table": "^1.14.0",
+    "moment": "^2.29.4",
     "next": "13.4.3",
     "next-auth": "^4.23.0",
     "react": "18.2.0",
