--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "material-react-table": "^1.14.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "next": "13.4.3",
     "next-auth": "^4.23.0",
     "react": "18.2.0",
