--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "@mui/icons-material": "latest",
     "@mui/lab": "^5.0.0-alpha.117",
     "@mui/material": "latest",
+    "@mui/x-date-pickers": "^6.16.1",
     "@tabler/icons-react": "^2.1.1",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "apexcharts": "3.36.3",
     "aws-amplify": "^5.3.7",
+    "dayjs": "^1.11.10",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "lodash": "^4.17.21",
     "material-react-table": "^1.14.0",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.43",
     "next": "13.4.3",
     "next-auth": "^4.23.0",
     "react": "18.2.0",
