--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity": "^3.428.0",
+    "@aws-sdk/client-dynamodb": "^3.428.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.428.0",
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
     "@emotion/server": "latest",
