--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,10 +1,25 @@
 {
   "api": {
     "lifeimpressionsapp": {
-      "dependsOn": [],
+      "dependsOn": [
+        {
+          "attributes": [
+            "UserPoolId"
+          ],
+          "category": "auth",
+          "resourceName": "lifeimpresionsauth"
+        }
+      ],
       "output": {
         "authConfig": {
-          "additionalAuthenticationProviders": [],
+          "additionalAuthenticationProviders": [
+            {
+              "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+              "userPoolConfig": {
+                "userPoolId": "authlifeimpresionsauth"
+              }
+            }
+          ],
           "defaultAuthentication": {
             "apiKeyConfig": {
               "apiKeyExpirationDate": "2024-09-16T03:00:42.830Z",
@@ -22,17 +37,7 @@
   "auth": {
     "lifeimpresionsauth": {
       "customAuth": false,
-      "dependsOn": [
-        {
-          "attributes": [
-            "Arn",
-            "Name"
-          ],
-          "category": "function",
-          "resourceName": "lifeimpresionsauthPostConfirmation",
-          "triggerProvider": "Cognito"
-        }
-      ],
+      "dependsOn": [],
       "frontendAuthConfig": {
         "mfaConfiguration": "OFF",
         "mfaTypes": [
@@ -63,37 +68,5 @@
       "service": "Cognito"
     }
   },
-  "function": {
-    "lifeimpresionsauthPostConfirmation": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    }
-  },
-  "parameters": {
-    "AMPLIFY_function_lifeimpresionsauthPostConfirmation_GROUP": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "lifeimpresionsauthPostConfirmation"
-        }
-      ]
-    },
-    "AMPLIFY_function_lifeimpresionsauthPostConfirmation_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "lifeimpresionsauthPostConfirmation"
-        }
-      ]
-    },
-    "AMPLIFY_function_lifeimpresionsauthPostConfirmation_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "lifeimpresionsauthPostConfirmation"
-        }
-      ]
-    }
-  }
+  "function": {}
 }
