--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "eslint-config-next": "13.4.3",
     "lodash": "^4.17.21",
     "material-react-table": "^1.14.0",
-    "next": "13.4.3",
+    "next": "^13.5.4",
     "next-auth": "^4.23.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "typescript": "5.0.4",
     "uuidv4": "^6.2.13"
