--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-next": "13.4.3",
     "lodash": "^4.17.21",
     "material-react-table": "^1.14.0",
+    "mui-tel-input": "^4.0.1",
     "next": "^13.5.4",
     "next-auth": "^4.23.0",
     "react": "^18.2.0",
