--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@aws-sdk/credential-providers": "^3.282.0",
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
-    "@emotion/server": "latest",
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/lab": "^5.0.0-alpha.117",
@@ -23,7 +22,6 @@
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "apexcharts": "3.36.3",
     "aws-amplify": "^5.3.7",
     "dayjs": "^1.11.10",
     "eslint": "8.41.0",
@@ -34,14 +32,19 @@
     "next": "^13.5.4",
     "next-auth": "^4.23.0",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "typescript": "5.0.4",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/lodash": "^4.14.194",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
