--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll --silent"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.284.0",
