--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ node_modules/
 
 coverage/
 
+amplify/.config/local-aws-info.json
+amplify/team-provider-info.json
+
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
