--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -74,5 +74,55 @@
       "service": "Cognito-UserPool-Groups"
     }
   },
-  "function": {}
+  "function": {
+    "LihMonthlyInventoryValue": {
+      "build": true,
+      "dependsOn": [
+        {
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput"
+          ],
+          "category": "api",
+          "resourceName": "lifeimpressionsapp"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
+  },
+  "parameters": {
+    "AMPLIFY_function_LihDevMonthlyInventoryValue_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihDevMonthlyInventoryValue"
+        }
+      ]
+    },
+    "AMPLIFY_function_LihDevMonthlyInventoryValue_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihDevMonthlyInventoryValue"
+        }
+      ]
+    },
+    "AMPLIFY_function_LihMonthlyInventoryValue_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihMonthlyInventoryValue"
+        }
+      ]
+    },
+    "AMPLIFY_function_LihMonthlyInventoryValue_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihMonthlyInventoryValue"
+        }
+      ]
+    }
+  }
 }
