--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -14,6 +14,14 @@
         "authConfig": {
           "additionalAuthenticationProviders": [
             {
+              "apiKeyConfig": {
+                "apiKeyExpirationDate": "2024-03-25T21:29:27.347Z",
+                "apiKeyExpirationDays": 30,
+                "description": "test"
+              },
+              "authenticationType": "API_KEY"
+            },
+            {
               "authenticationType": "AWS_IAM"
             }
           ],
