--- a/amplify/backend/function/LihMonthlyInventoryValue/Pipfile
+++ b/amplify/backend/function/LihMonthlyInventoryValue/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 src = {editable = true, path = "./src"}
 boto3 = "*"
 requests = "*"
+requests_aws4auth = "*"
 
 [requires]
 python_version = "3.10"
