Update cache to use createdAt as PK

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -98,5 +98,39 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     }
+  },
+  "parameters": {
+    "AMPLIFY_function_LihDevMonthlyInventoryValue_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihDevMonthlyInventoryValue"
+        }
+      ]
+    },
+    "AMPLIFY_function_LihDevMonthlyInventoryValue_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihDevMonthlyInventoryValue"
+        }
+      ]
+    },
+    "AMPLIFY_function_LihMonthlyInventoryValue_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihMonthlyInventoryValue"
+        }
+      ]
+    },
+    "AMPLIFY_function_LihMonthlyInventoryValue_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihMonthlyInventoryValue"
+        }
+      ]
+    }
   }
 }
