--- a/amplify/backend/function/LihMonthlyInventoryValueProd/Pipfile
+++ b/amplify/backend/function/LihMonthlyInventoryValueProd/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 src = {editable = true, path = "./src"}
+boto3 = "*"
+requests = "*"
+requests_aws4auth = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
