Push lambda to cloud

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -92,7 +92,23 @@
     }
   },
   "parameters": {
+    "AMPLIFY_function_LihMonthlyInventoryValueProd_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihMonthlyInventoryValueProd"
+        }
+      ]
+    },
     "AMPLIFY_function_LihMonthlyInventoryValueProd_invValCacheTableName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihMonthlyInventoryValueProd"
+        }
+      ]
+    },
+    "AMPLIFY_function_LihMonthlyInventoryValueProd_s3Key": {
       "usedBy": [
         {
           "category": "function",
