Add migration scripts: tshirt order index fix

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ node_modules/
 .vscode
 .venv
 
+
 *__pycache__*
 
 coverage/
@@ -16,7 +17,7 @@ amplify/.config/local-aws-info.json
 amplify/team-provider-info.json
 
 
-migration/*.json
+migration/data
 
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
