--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -100,6 +100,22 @@
     }
   },
   "parameters": {
+    "AMPLIFY_function_LihDevMonthlyInventoryValue_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihDevMonthlyInventoryValue"
+        }
+      ]
+    },
+    "AMPLIFY_function_LihDevMonthlyInventoryValue_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihDevMonthlyInventoryValue"
+        }
+      ]
+    },
     "AMPLIFY_function_LihMonthlyInventoryValue_deploymentBucketName": {
       "usedBy": [
         {
