--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -15,9 +15,9 @@
           "additionalAuthenticationProviders": [
             {
               "apiKeyConfig": {
-                "apiKeyExpirationDate": "2024-03-25T21:29:27.347Z",
-                "apiKeyExpirationDays": 30,
-                "description": "test"
+                "apiKeyExpirationDate": "2025-03-11T12:05:12.605Z",
+                "apiKeyExpirationDays": 15,
+                "description": "test local"
               },
               "authenticationType": "API_KEY"
             },
@@ -82,39 +82,5 @@
       "service": "Cognito-UserPool-Groups"
     }
   },
-  "function": {
-    "LihMonthlyInventoryValue": {
-      "build": true,
-      "dependsOn": [
-        {
-          "attributes": [
-            "GraphQLAPIIdOutput",
-            "GraphQLAPIEndpointOutput"
-          ],
-          "category": "api",
-          "resourceName": "lifeimpressionsapp"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    }
-  },
-  "parameters": {
-    "AMPLIFY_function_LihMonthlyInventoryValue_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "LihMonthlyInventoryValue"
-        }
-      ]
-    },
-    "AMPLIFY_function_LihMonthlyInventoryValue_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "LihMonthlyInventoryValue"
-        }
-      ]
-    }
-  }
+  "function": {}
 }
