Add call to list order change api; Improve pagination for OrderChanges table
Still need to improve pagination for the other tables

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -82,5 +82,23 @@
       "service": "Cognito-UserPool-Groups"
     }
   },
-  "function": {}
+  "function": {},
+  "parameters": {
+    "AMPLIFY_function_LihMonthlyInventoryValue_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihMonthlyInventoryValue"
+        }
+      ]
+    },
+    "AMPLIFY_function_LihMonthlyInventoryValue_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "LihMonthlyInventoryValue"
+        }
+      ]
+    }
+  }
 }
