--- a/amplify.yml
+++ b/amplify.yml
@@ -19,6 +19,7 @@ frontend:
     build:
       commands:
         - NEXT_PUBLIC_BUILD_ENV=${NEXT_PUBLIC_BUILD_ENV}
+        - NEXT_PUBLIC_API_GATEWAY_URL=${NEXT_PUBLIC_API_GATEWAY_URL}
         - npm run build
   artifacts:
     baseDirectory: .next
