--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "latest",
     "@mui/x-date-pickers": "^6.16.1",
     "@tabler/icons-react": "^2.1.1",
+    "@tanstack/react-query": "^5.67.2",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
