--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=--max_old_space_size=4096 next dev",
+    "dev": "cross-env NEXT_PUBLIC_API_GATEWAY_URL='https://f2zinn932i.execute-api.us-west-2.amazonaws.com/prod/' NODE_OPTIONS=--max_old_space_size=4096 next dev",
     "build": "next build",
     "start": "next start",
     "test": "jest",
